添加了头部页面

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 #https://github.com/codedrinker/community
+server.port=8887
+spring.web.resources.static-locations=classpath:/templates/,classpath:/static/
